
2009-03-29 17:28 Ali aliov@xfce.org 
	 * : Disabling lid and sleep buttons if the power manager is in inhibit state

2009-03-29 16:24 Ali aliov@xfce.org 
	 * : Added option to reload panel brightness plugin

2009-03-29 16:01 Ali aliov@xfce.org 
	 * : Show an adapter icon if no battery device found and user select to always show icon

2009-03-29 15:39 Ali aliov@xfce.org 
	 * : Added xfpmshutdown to sync all the request

2009-03-29 12:22 Ali aliov@xfce.org 
	 * : Added power off button action

2009-03-29  0:43 Ali aliov@xfce.org 
	 * : Increase glib version dependency to 2.16

2009-03-28 17:19 Ali aliov@xfce.org 
	 * : Handle hald is not running or disconnected

2009-03-28 14:47 Ali aliov@xfce.org 
	 * : Move the context menu to xfpm-tray-icon

2009-03-27 15:37 Ali aliov@xfce.org 
	 * : Move the configuration loading to xfpm-xfconf

2009-03-25 13:03 Ali aliov@xfce.org 
	 * : Added xfpm-errors quark for the common errors

2009-03-24 16:34 Ali aliov@xfce.org 
	 * : Fix missing files in the POTFILES+rename the settings desktop file

2009-03-24 16:18 Ali aliov@xfce.org 
	 * : Generate random cookie on the inhibit+some optimizations

2009-03-24 16:09 Ali aliov@xfce.org 
	 * : Fix a crash in the brightness plugin when no device found

2009-03-23 21:54 Ali aliov@xfce.org 
	 * : Support for panel floating position when showing up the brightness popup

2009-03-23 20:55 Ali aliov@xfce.org 
	 * : Fix a crash in the inhibit plugin when the running power manager disappears from the session bus

2009-03-23 20:09 Ali aliov@xfce.org 
	 * : Moved notification to the common code+added notification to the inhibit plugin

2009-03-22 23:09 Ali aliov@xfce.org 
	 * : Support cookies in the inhibit interface

2009-03-22 20:45 Ali aliov@xfce.org 
	 * : Correct the tooltips of the inhibit plugin

2009-03-22 20:23 Ali aliov@xfce.org 
	 * : Provide a dbus interface to syncronize the brightness plugin and xfpm+update POTFILES

2009-03-22 19:02 Ali aliov@xfce.org 