@@ -1,4 +1,7 @@
 
+2009-03-29 18:09 Ali aliov@xfce.org 
+	 * : Inhibit plugin: automatically reconnect when the power manager restarts
+
 2009-03-29 17:28 Ali aliov@xfce.org 
 	 * : Disabling lid and sleep buttons if the power manager is in inhibit state
 
